--- a/docs/17内置对象.md
+++ b/docs/17内置对象.md
@@ -226,12 +226,12 @@ Math 对象不是构造函数，它具有数学常数和函数的属性和方法
 
 | 方法名        | 说明                     | 代码               |
 | ------------- | ------------------------ | ------------------ |
-| getFullYear() | 获取当年                 | dObj.getFullYear() |
+| getFullYear() | 获取年份                 | dObj.getFullYear() |
 | getMonth()    | 获取当月(0-11)           | dObj.getMonth()    |
 | getDate()     | 获取当天日期             | dObj.getDate()     |
 | getDay()      | 获取星期几(周日0到周六6) | dObj.getDay()      |
 | getHours()    | 获取当前小时             | dObj.getHours()    |
-| getMinutes()  | 获取当前小时             | dObj.getMinutes()  |
+| getMinutes()  | 获取当前分钟             | dObj.getMinutes()  |
 | getSeconds()  | 获取当前秒钟             | dObj.gerSeconds()  |
 
 ```
@@ -280,6 +280,8 @@ Math 对象不是构造函数，它具有数学常数和函数的属性和方法
         console.log(getTime());
     </script>
 ```
+
+
 
 #### 获取日期的总的毫秒形式
 
@@ -629,6 +631,8 @@ arr2.sort(function(a,b){
 console.log(arr2);
 ```
 
+
+
 #### 数组对象
 
 | 方法名        | 说明                                 | 返回值                                   |
@@ -775,7 +779,7 @@ console.log(arr2);
 
 | 方法名                              | 说明                                                         |
 | ----------------------------------- | ------------------------------------------------------------ |
-| indexOf(‘要查找的字符’，开始的位置) | 返回指定内容在元字符串中的位置，如果找不到就返回-1，开始的位置是index索引号 |
+| indexOf(‘要查找的字符’，开始的位置) | 返回指定内容在原字符串中的位置，如果找不到就返回-1，开始的位置是index索引号 |
 | lastIndexOf()                       | 从后往前找，只找第一个匹配的                                 |
 
 ```
@@ -829,7 +833,7 @@ console.log(arr2);
 ```
     <script>
         var arr = 'andy';
-        console.log(arr.charAt(3)); //y
+        console.log(arr.charAt(3)); //
         // 遍历所有字符
         for(var i = 0;i < arr.length;i++){
             console.log(arr .charAt(i));
@@ -874,6 +878,7 @@ console.log(arr2);
         // 有一个对象 来判断是否有该属性 对象['属性名']
         var o = {
             age: 18
+            
         }
         if (o['sex']) {
             console.log('里面有该属性');
@@ -960,13 +965,13 @@ console.log(arr2);
         // slice('截取的起始位置','截取的截止位置，截止位置不取')		
         // 从 start 位置开始，截取到 end 位置 ，end 取不到 (两个都是索引号)
          var str = '改革春风吹满地';
-         console.log(str.slice(0,3));   //革春,0和3都是索引号
+         console.log(str.slice(0,3));   //改革春,0和3都是索引号
     </script>
 ```
 
 
 
-##### substring(start,end)		从 start 位置开始，截取到 end 位置 ，end 取不到 (基本和 slice 相同，但是不接受负)
+###### substring(start,end)		从 start 位置开始，截取到 end 位置 ，end 取不到 (基本和 slice 相同，但是不接受负)
 
 ```
     <script>
@@ -1018,6 +1023,17 @@ console.log(arr2);
         console.log(str2.split(','));       //['red', ' pink', ' blue']
         var str3 = 'red&pink&blue';
         console.log(str3.split('&'));       //['red', 'pink', 'blue']
+    </script>
+```
+
+
+
+```
+    <script>
+        var str = 'a,b,c,d';
+        console.log(str.split('**'));       ///除了逗号都是一个数组
+        console.log(str.split(','));        //逗号就是一个数组
+        console.log(str.split());       //不带符号还是一个数组
     </script>
 ```
 
