--- a/docs/17内置对象.md
+++ b/docs/17内置对象.md
@@ -971,7 +971,7 @@ console.log(arr2);
 
 
 
-###### substring(start,end)		从 start 位置开始，截取到 end 位置 ，end 取不到 (基本和 slice 相同，但是不接受负)
+##### substring(start,end)		从 start 位置开始，截取到 end 位置 ，end 取不到 (基本和 slice 相同，但是不接受负)
 
 ```
     <script>
