--- a/docs/19高级事件.md
+++ b/docs/19高级事件.md
@@ -564,3 +564,455 @@ eventTarget.addEventListener('click', function(event) {
     </script>
 ```
 
+
+
+#### 阻止事件冒泡
+
+**事件冒泡**：开始时由最具体的元素接收，然后逐级向上传播到到 DOM 最顶层节点
+
+事件冒泡本身的特性，会带来的坏处，也会带来的好处，需要我们灵活掌握。
+
+- 标准写法
+
+  ```
+  e.stopPropagation();
+  ```
+
+- 非标准写法： IE6-8 利用对象事件 cancelBubble属性
+
+  ```
+  e.cancelBubble = true;
+  ```
+
+###### 例子：
+
+`css`
+
+```
+    <style>
+        .father{
+            width: 200px;
+            height: 200px;
+            background-color: aqua;
+        }
+        .son{
+            width: 100px;
+            height: 100px;
+            background-color: olivedrab;
+        }
+    </style>
+```
+
+`HTML`
+
+```
+    <div class="father">
+        <div class="son">son盒子</div>
+    </div>
+
+    <script>
+        var son1 = document.querySelector('.son');
+        son1.addEventListener('click',function(e){
+            alert('儿子');
+            e.stopPropagation();    // stop 停止，Propagation 传播   
+            e.cancelBubble = true;   // 非标准写法，cancel 取消 bubble 泡泡
+        },false);
+        
+        var father1 = document.querySelector('.father');
+        father1.addEventListener('click',function(){
+            alert('父亲');
+        },false);
+
+        document.addEventListener('click',function(){
+            alert('document');
+        })
+    </script>
+```
+
+
+
+##### 阻止事件冒泡的兼容性解决方案 				<font color=yellow>了解</font>
+
+语法：
+
+```
+if(e && e.stopPropagation){
+    e.stopPropagation();
+}else{
+    window.event.cancelBubble = true;
+}
+```
+
+
+
+###### 例子：
+
+`CSS`
+
+```
+    <style>
+        .father{
+            width: 200px;
+            height: 200px;
+            background-color: aqua;
+        }
+        .son{
+            width: 100px;
+            height: 100px;
+            background-color: olivedrab;
+        }
+    </style>
+```
+
+`HTML`
+
+```
+   <div class="father">
+        <div class="son">son盒子</div>
+    </div>
+
+    <script>
+        var son1 = document.querySelector('.son');
+        son1.addEventListener('click',function(e){
+            alert('儿子');
+            if(e && e.stopPropagation){
+                e.stopPropagation();
+            }else{
+                window.event.cancelBubble = true;
+            }
+        },false);
+        
+        var father1 = document.querySelector('.father');
+        father1.addEventListener('click',function(){
+            alert('父亲');
+        },false);
+
+        document.addEventListener('click',function(){
+            alert('document');
+        })
+    </script>
+```
+
+
+
+
+
+#### 事件委托    <font color=yellow>了解</font>
+
+- 事件委托也称为事件代理，在 jQuery 里面称为事件委派
+- 事件委托的原理
+  - 不是每个子节点单独设置事件监听器，而是事件监听器设置在其父节点上，然后利用冒泡原理影响设置每个子节点
+
+###### 例子：
+
+```
+    <ul>
+        <li>甲</li>
+        <li>乙</li>
+        <li>丙</li>
+        <li>丁</li>
+    </ul>
+    
+    <script>
+        // 通过单独给每个li标签分别给甲、乙、丙、丁添加点击事件
+        
+        // var lis = document.querySelectorAll('li');
+        // lis[0].addEventListener('click',function(){
+        //     console.log('ha');
+        // })
+        // lis[1].addEventListener('click',function(){
+        //     console.log('ha');
+        // })
+        // lis[2].addEventListener('click',function(){
+        //     console.log('ha');
+        // })
+        // lis[3].addEventListener('click',function(){
+        //     console.log('ha');
+        // })
+
+        // 事件委托核心原理：不是给每一个子节点单独设置事件监听器,而是将事件监听器设置在其父节点上，利用事件冒泡原理影响每一个子节点
+        // 使用事件委托，对ul标签了，添加时间
+        var ul1 = document.querySelector('ul');
+        ul1.addEventListener('click',function(e){
+            // console.log('ha');
+            // e.target 可以获取到我们点击的对象
+            e.target.style.backgroundColor = 'yellow';
+        })
+    </script>
+```
+
+
+
+
+
+#### 常用的鼠标事件
+
+| 鼠标事件    | 触发条件         |
+| ----------- | ---------------- |
+| onclick     | 鼠标点击左键触发 |
+| onmouseover | 鼠标经过触发     |
+| onmouseout  | 鼠标离开触发     |
+| onfocus     | 获得鼠标焦点触发 |
+| onblur      | 失去鼠标焦点触发 |
+| onmousemove | 鼠标移动触发     |
+| onmouseup   | 鼠标弹起触发     |
+| onmousedown | 鼠标按下触发     |
+
+
+
+##### 禁止鼠标右键事件与鼠标选中事件
+
+- `contextmenu`主要控制应该何时显示上下文菜单，主要用于程序员取消默认的上下文菜单
+- `selectstart` 禁止鼠标选中
+
+###### 例子：
+
+```
+    <p>contextmenu  禁用鼠标右键菜单 事件</p>
+    <p>这是一段不能被选中的文字</p>
+
+    <script>
+        // 1、contextmenu  禁用鼠标右键菜单 事件
+        document.addEventListener('contextmenu',function(e){
+            e.preventDefault();
+        })
+
+        // 2、selectstatr  禁止选中文字事件 
+        document.addEventListener('selectstart',function(e){
+            e.preventDefault();
+        })
+    </script>
+```
+
+
+
+##### 鼠标事件对象
+
+- **event**对象代表事件的状态，跟事件相关的一系列信息的集合
+- 现阶段我们主要是用鼠标事件对象 **MouseEvent** 和键盘事件对象 **KeyboardEvent。**
+
+| 鼠标事件对象    | 说明                                      |
+| --------------- | ----------------------------------------- |
+| e.clientX       | 返回鼠标相对于浏览器窗口**可视区**的X坐标 |
+| e.clientY       | 返回鼠标相对于浏览器窗口**可视区**的Y坐标 |
+| e.pageX（重点） | 返回鼠标相对于文档页面的X坐标 IE9+ 支持   |
+| e.pageY（重点） | 返回鼠标相对于文档页面的Y坐标 IE9+ 支持   |
+| e.screenX       | 返回鼠标相对于电脑屏幕的X坐标             |
+| e.screenY       | 返回鼠标相对于电脑屏幕的Y坐标             |
+
+
+
+###### 例子：
+
+```
+    <div style="width:500px;height: 3000px;border: 1px solid black;"></div>
+    <script>
+        // 鼠标事件对象 MouseEvent
+        document.addEventListener('click',function(e){
+            // 返回event 的事件集合
+            console.log(e);
+            // 1、client 鼠标在可视区的x和y轴坐标
+            console.log('client 鼠标在可视区的x和y轴坐标');
+            console.log(e.clientX);
+            console.log(e.clientY);
+            // 2、page 鼠标在页面文档的x和y轴坐标
+            console.log('page 鼠标在页面文档的x和y轴坐标');
+            console.log(e.pageX);
+            console.log(e.pageY);
+            // 3、screen 鼠标在电脑屏幕的x和y轴的坐标
+            console.log('screen 鼠标在电脑屏幕的x和y轴的坐标');
+            console.log(e.screenX);
+            console.log(e.screenY);
+        })
+    </script>
+```
+
+
+
+
+
+#### 常用的键盘事件
+
+| 键盘事件   | 触发条件                                                     |
+| ---------- | ------------------------------------------------------------ |
+| onkeyup    | 某个键盘按键被松开时触发                                     |
+| onkeydown  | 某个键盘按键被按下时触发                                     |
+| onkeypress | 某个键盘按键被按下时触发，但是它不识别功能键，比如 ctrl shift 箭头等 |
+
+- **如果使用addEventListener 不需要加 on**
+- `onkeypress` 和前面2个的区别是，它不识别功能键，比如左右箭头， ctrl shift  等
+- 三个事件的执行顺序是： keydown – keypress — keyup
+
+
+
+###### 例子：
+
+```
+    <script>
+        // keyup 键盘弹起时触发
+        document.addEventListener('keyup',function(){
+            console.log('键盘弹起时触发');
+        })
+        // keypress 键盘按下时触发，但是它不识别功能键，比如 ctrl shift 箭头等
+        document.addEventListener('keypress',function(){
+            console.log('键盘按下时触发');
+        })
+        // keydown，也是键盘按下触发，但是可以识别ctrl shift 箭头等多功能键,因为跟其他软件多功能键冲突，所以不建议使用
+        document.addEventListener('keydown',function(){
+            console.log('也是键盘按下触发，但是可以识别ctrl shift 箭头等多功能键');
+        })
+    </script>
+```
+
+
+
+##### 键盘事件对象
+
+| 键盘事件对象 **属性** | 说明                    |
+| --------------------- | ----------------------- |
+| keyCode               | 返回该**键**值的ASCII值 |
+
+- `onkeydown`和 `onkeyup` 不区分字母大小写，`onkeypress` 区分字母大小写。
+- 在我们实际开发中，我们更多的使用`keydown`和`keyup`， 它能识别所有的键（包括功能键）
+- `Keypress` 不识别功能键，但是`keyCode`属性能区分大小写，返回不同的ASCII值
+
+
+
+###### 例子：
+
+```
+    <script>
+        // 当键盘按下时，会返回一个键盘事件的对象
+        document.addEventListener('keyup',function(e){
+            console.log(e);
+            // 键盘事件对象中，使用keyCode属性可以得到相应键的ASCII码值
+            console.log('keyup事件,返回的ASCII码值无论大写还是小写都是一样的'+e.keyCode);     //65    ,   但是 keyup 和 keydown 这两个事件不区分大小写，A 和 a 得到返回值都是  65
+            // 我们可以利用keycode返回的ASCII码值 用来判断用户按下了哪个键位
+            if(e.keyCode === 65){
+                console.log('你按下了字母a键，但是你这个keyup事件是不区分大小写的');
+            }else{
+                console.log('你没有按下a键');
+            }
+        })
+        
+        // 当键盘按下时，会返回一个键盘事件的对象
+        document.addEventListener('keypress',function(e){
+            // 键盘事件对象中，使用keyCode属性可以得到相应键的ASCII码值, keypress 事件区分字母大小写， a 是 97  A 是 65；
+            console.log(e.keyCode);
+            console.log('keypress事件可以区分字母的大小写'+e.keyCode);
+        })
+    </script>
+```
+
+
+
+##### 案例——京东搜索框
+
+参考网址：[京东搜索框，按下s键，自动选中搜索框](https://www.jd.com/?country=USA)
+
+使用所学键盘事件，完成键盘按下s键，自动选中搜索框
+
+
+
+思路：
+
+1、检测用户是否按下了 s 键，如果按下 s 键 ，就把光标定位到搜索框里面；
+
+2、使用键盘事件对象里面的keyCode 判断用户按下的是否为S键
+
+3、搜索框获得焦点，使用js 里面的 focus()方法
+
+
+
+```
+    <!-- 使用所学键盘事件，完成键盘按下s键，自动选中搜索框 -->
+    <input type="text">
+    <script>
+        var search1 = document.querySelector('input');
+        document.addEventListener('keyup',function(e){
+            if(e.keyCode === 83){
+                search1.focus();
+            }
+        })
+    </script>
+```
+
+
+
+##### 案例S1915——模拟京东单号查询
+
+[模拟京东单号查询——参考链接](https://www.baidu.com/s?ie=utf-8&f=3&rsv_bp=1&rsv_idx=1&ch=&tn=baidu&bar=&wd=%E4%BA%AC%E4%B8%9C%E5%BF%AB%E9%80%92%E5%8D%95%E5%8F%B7%E6%9F%A5%E8%AF%A2&rn=&fenlei=256&oq=&rsv_pq=df31593200139ff8&rsv_t=353ebr%2BrGX2ozQsL5gNsYIeuMHJcMhBCur2Tmi0WKst5xnz2nwQ066yEFWU&rqlang=cn&rsv_enter=1&rsv_btype=i&prefixsug=&rsp=0&rsv_dl=ih_0&inputT=3584)
+
+当input文本框输入内容时，上方div框中，出现文本框相对应的内容，并且实时更新
+
+
+
+思路：
+
+1、快递单号输入内容时，上面的大号字体盒子`con`显示
+
+2、表单检测用户输入：需要给表单添加键盘事件
+
+3、同时把快递单号里面的值（value）获取过来赋值给con盒子，并使用（inneText）作为内容
+
+4、如果快递单号里面内容为空，则隐藏大号字体con盒子
+
+
+
+`CSS`
+
+```
+    <style>
+        .search{
+            position: relative;
+        }
+        .con{
+            display: none;
+            position: absolute;
+            width: 171px;
+            border: 1px solid rgba(0, 0, 0, .2);
+            box-shadow: 0 2px 4px rgba(0,0,0,0.);
+            padding: 5px 0;
+            font-size: 18px;
+            line-height: 20px;
+            color: #333;
+        }
+        .search input{
+            margin-top: 41px;
+        }
+    </style>
+```
+
+`HTML`
+
+```
+    <div class="search">
+        <div class="con"></div>
+        <input type="text" placeholder="请输入你的快递单号" class="jd">
+    </div>
+
+    <script>
+        // 获取元素
+        var con1 = document.querySelector('.con');
+        var jd_input = document.querySelector('.jd');
+
+        // 添加键盘按下返回的事件,需要注意的是如果使用 kyedown 和 keypress 事件时会有延迟效果，因为文字还没有落入文本框中。
+        jd_input.addEventListener('keyup',function(){
+            // 使用log输出进行测试，是否生效
+            // console.log('输入内容了');
+            // 将隐藏的盒子通过   行内设置样式  显示出来
+            // con1.style.display = 'block';
+            // 获取输入文本框的值   赋给   con1，并使用innerText修改文本内容,但是目前进行内容输入后，如果删除输入框的文字，还会有空白的div出现，用户体验不友好
+            // con1.innerText = this.value;
+            
+            // 所以我们通过条件判断，判断input里面的value值是否为空
+            if(this.value == ''){
+                con1.style.display = 'none';
+            }else{
+                con1.style.display = 'block';
+                con1.innerText = this.value;
+            }
+        })
+    </script>
+```
+
