--- a/docs/19高级事件.md
+++ b/docs/19高级事件.md
@@ -14,7 +14,7 @@
 | 特点：注册事件的唯一性                                       | 特点：同一个元素同一个事件可以注册多个监听器          |
 | 同一个元素同一个事件只能设置一个处理函数，<br />最后注册的处理函数将会覆盖前面注册的处理函数 | 按注册顺序依次执行                                    |
 
-###### 例子：传统注册方式
+`例子：传统注册方式`
 
 ```
     <button>传统注册时间</button>
@@ -162,7 +162,7 @@ eventTarget.onclick = null;
 
 
 
-###### 例子：
+`例子`：
 
 ```
 		<div>1</div>
@@ -241,7 +241,7 @@ function removeEventListener(element, eventName, fn) {
 
 
 
-###### 例子：
+`例子`：
 
 ```
         .father{
@@ -289,7 +289,7 @@ document -> html -> body -> father -> son
 
 ### 事件冒泡代码流验证
 
-###### 例子：
+`例子`：
 
 ```
     <style>
@@ -382,7 +382,7 @@ eventTarget.addEventListener('click', function(event) {
 
 
 
-###### 例子：
+`例子`：
 
 ```
     <style>
@@ -448,7 +448,7 @@ eventTarget.addEventListener('click', function(event) {
 
 #### e.target			返回触发事件的对象标准
 
-###### 例子：
+`例子`：
 
 ```
     <div style="width: 100px;height: 100px;background-color: pink;"></div>
@@ -468,7 +468,7 @@ eventTarget.addEventListener('click', function(event) {
 
 #### e.target 和 this 的区别
 
-###### 例子：
+`例子`：
 
 ```
     <ul>
@@ -493,7 +493,7 @@ eventTarget.addEventListener('click', function(event) {
 
 #### e.srcElement    返回触发事件的对象 非标准 ie6-8使用		<font color=yellow>了解</font>
 
-###### 例子：
+`例子：`
 
 ```
     <div style="width: 100px;height: 100px;background-color: pink;"></div>
@@ -513,7 +513,7 @@ eventTarget.addEventListener('click', function(event) {
 
 #### e.type  返回事件的类型    比如`click` `mouseover` 不带on
 
-###### 例子：
+`例子：`
 
 ```
     <div>123</div>
@@ -534,7 +534,7 @@ eventTarget.addEventListener('click', function(event) {
 
 #### 事件对象阻止默认行为
 
-###### 例子：
+`例子：`
 
 ```
 <a href="http://www.baidu.com">百度</a>
@@ -584,7 +584,7 @@ eventTarget.addEventListener('click', function(event) {
   e.cancelBubble = true;
   ```
 
-###### 例子：
+`例子：`
 
 `css`
 
@@ -645,7 +645,7 @@ if(e && e.stopPropagation){
 
 
 
-###### 例子：
+`例子：`
 
 `CSS`
 
@@ -703,7 +703,7 @@ if(e && e.stopPropagation){
 - 事件委托的原理
   - 不是每个子节点单独设置事件监听器，而是事件监听器设置在其父节点上，然后利用冒泡原理影响设置每个子节点
 
-###### 例子：
+`例子：`
 
 ```
     <ul>
@@ -765,7 +765,7 @@ if(e && e.stopPropagation){
 - `contextmenu`主要控制应该何时显示上下文菜单，主要用于程序员取消默认的上下文菜单
 - `selectstart` 禁止鼠标选中
 
-###### 例子：
+`例子：`
 
 ```
     <p>contextmenu  禁用鼠标右键菜单 事件</p>
@@ -802,7 +802,7 @@ if(e && e.stopPropagation){
 
 
 
-###### 例子：
+`例子：`
 
 ```
     <div style="width:500px;height: 3000px;border: 1px solid black;"></div>
@@ -845,7 +845,7 @@ if(e && e.stopPropagation){
 
 
 
-###### 例子：
+`例子：`
 
 ```
     <script>
@@ -878,7 +878,7 @@ if(e && e.stopPropagation){
 
 
 
-###### 例子：
+`例子：`
 
 ```
     <script>
