js open close moveTo

--- a/docs/18-1正则表达式.md
+++ b/docs/18-1正则表达式.md
@@ -25,7 +25,15 @@
 
 ## 正则表达式
 
-  作用:使用指定的规则验证字符串的格式是否正确,多用于表单验证
+作用：使用指定的规则验证字符串的格式是否正确,多用于表单验证
+
+参考链接：
+
+https://regexr-cn.com/
+
+https://www.codejiaonang.com/#/course/regex_chapter1/0/0
+
+
 
 ```
 var 标识符 = /正则表达式/修饰符
@@ -114,7 +122,7 @@ zhengze =  /Hello/g;
 
 ### 匹配空白`\s`
 
-`\s`快捷方式可以**匹配空白字符**，比如空格，tab、换行等。
+`\s`快捷方式可以**匹配空白字符**，比如空格，tab、换行等。 
 
 
 
@@ -212,7 +220,7 @@ zhengze =  /Hello/g;
 
 ![image-20220606201935706](18-1正则表达式.assets/image-20220606201935706.png)
 
-**闭区间不写即可表示匹配一个或无数个**
+**开闭区间不写即可表示匹配一个或无数个**
 
 #### 速写  `+`等价于`{1,} `         `*`等价于`{0,}` 
 
@@ -244,6 +252,8 @@ zhengze =  /Hello/g;
 
 
 
+
+
 ### 正则表达式总结
 
 #### 多种匹配模式
@@ -268,13 +278,15 @@ zhengze =  /Hello/g;
 | `?`  | 匹配一个字符零次或一次，另一个作用是非贪婪模式               |
 | `+`  | 匹配1次或多次                                                |
 | `*`  | 匹配0次或多次                                                |
-| `\b` | 匹配一个长度为`0`的子串                                      |
+| `\b` | `\b` 匹配的是单词的边界，匹配整个单词                        |
 | `\d` | 匹配一个数字字符。等价于 [0-9]。                             |
 | `\D` | 匹配一个非数字字符。等价于 [^0-9]。                          |
 | `\s` | 匹配任何空白字符，包括空格、制表符、换页符等等。等价于 [ \f\n\r\t\v]。 |
 | `\S` | 匹配任何非空白字符。等价于 [^ \f\n\r\t\v]。                  |
 | `\w` | 匹配包括下划线的任何单词字符。等价于’[A-Za-z0-9_]’。         |
 | `\W` | 匹配任何非单词字符。等价于 ‘[^A-Za-z0-9_]‘。                 |
+
+
 
 
 
@@ -302,7 +314,7 @@ zhengze =  /Hello/g;
                 return true;
             }else{
                 alert('失败');
-                return false; 
+                return false;
             }
         }
 
@@ -337,4 +349,54 @@ zhengze =  /Hello/g;
 
 
 
-[^A-Za-z0-9_]: 
+
+
+### 全选全不选反选（例子）
+
+```
+    <form action="">
+        <input type="button" value="全选" id="btn1">
+        <input type="button" value="全不选" id="btn2">
+        <input type="button" value="反选" id="btn3">
+        <br>
+        HTML<input type="checkbox" name="a" id="">
+        CSS<input type="checkbox" name="a" id="">
+        JavaScript<input type="checkbox" name="a" id="">
+        jquery<input type="checkbox" name="a" id="" >
+    </form>
+
+    <script>
+        // 全选
+        var btn1 = document.getElementById('btn1');
+        btn1.onclick = function(){
+            var che = document.getElementsByName('a');
+            for(var i = 0;i<che.length;i++){
+                che[i].checked = true;
+            }
+        }
+        // 全不选
+        var btn2 = document.getElementById('btn2');
+        btn2.onclick = function(){
+            var che = document.getElementsByName('a');
+            for(var i = 0;i<che.length;i++){
+                che[i].checked = false;
+            }
+        }
+        // 反选
+        var btn3 = document.getElementById('btn3');
+        btn3.onclick = function(){
+            var che = document.getElementsByName('a');
+            for(var i = 0;i<che.length;i++){
+                che[i].checked = !che[i].checked;
+            }
+        }
+    </script>
+```
+
+
+
+### 表单
+
+账号要求：数字，字母 不少于10位，不多与18位
+
+密码要求：数字，字母 不少于10位，不多与18位
