--- a/docs/16对象.md
+++ b/docs/16对象.md
@@ -11,10 +11,10 @@
 
 ### 创建对象的三种方式
 
- JavaScript 中，现阶段我们可以采用三种方式创建对象（object）
+ JavaScript 中，现阶段我们可以采用三种方式创建对象（`object`）
 
 - 利用字面量创建对象
-- 利用 new Object创建对象
+- 利用 `new Object`创建对象
 - 利用构造函数创建对象
 
 #### 利用字面量创建对象
