--- a/docs/18-1正则表达式.md
+++ b/docs/18-1正则表达式.md
@@ -294,7 +294,7 @@ zhengze =  /Hello/g;
 
 `例子`
 
-```
+```html
     <!-- 必须需要return才可以实现阻拦form表单跳转 -->
     <form action="success.html" method="get" onsubmit="return a()">
         账号:<input type="text" id="input_text" onblur="zh()" value="Hello world!">
@@ -353,7 +353,7 @@ zhengze =  /Hello/g;
 
 ### 全选全不选反选（例子）
 
-```
+```html
     <form action="">
         <input type="button" value="全选" id="btn1">
         <input type="button" value="全不选" id="btn2">
