--- a/docs/05变量.md
+++ b/docs/05变量.md
@@ -17,7 +17,7 @@
 </script>
 ```
 
-- var是一个js关键字，用来声明变量(variable变量的意思)。使用该关键字声明变量。
+- `var`是一个js关键字，用来声明变量(variable变量的意思)。使用该关键字声明变量。
 - age是程序员定义的变量名，我们要通过变量名来访问内存中分配的空间。
 
 
