--- a/docs/17内置对象.md
+++ b/docs/17内置对象.md
@@ -640,11 +640,11 @@ console.log(arr2);
 | indexOf()     | 数组中查找该元素的第一个索引         | 如果存在返回索引号，如果不存在，则返回-1 |
 | lastIndexOf() | 在数组查找最后一个索引，从后向前索引 | 如果存在返回索引号，如果不存在，则返回-1 |
 
-1、返回数组元素索引号方法 indexOf(数组元素)  作用就是返回该数组元素的索引号,只返回第一个满足条件的索引号
+1、返回数组元素索引号方法 indexOf(数组元素)  作用就是返回该数组元素的索引号,只返回第一个满足条件的索引号。
 
-2、它只发返回第一个满足条件的索引号
+2、它只发返回第一个满足条件的索引号。
 
-3、如果找不到元素，则返回-1
+3、如果找不到元素，则返回-1。
 
 ```
     <script>
