--- a/docs/17内置对象.md
+++ b/docs/17内置对象.md
@@ -635,10 +635,10 @@ console.log(arr2);
 
 #### 数组对象
 
-| 方法名        | 说明                                 | 返回值                                   |
-| ------------- | ------------------------------------ | ---------------------------------------- |
-| indexOf()     | 数组中查找该元素的第一个索引         | 如果存在返回索引号，如果不存在，则返回-1 |
-| lastIndexOf() | 在数组查找最后一个索引，从后向前索引 | 如果存在返回索引号，如果不存在，则返回-1 |
+| 方法名        | 说明                                   | 返回值                                   |
+| ------------- | -------------------------------------- | ---------------------------------------- |
+| indexOf()     | 数组中查找该元素的第一个索引           | 如果存在返回索引号，如果不存在，则返回-1 |
+| lastIndexOf() | 在数组中查找最后一个索引，从后向前索引 | 如果存在返回索引号，如果不存在，则返回-1 |
 
 1、返回数组元素索引号方法 indexOf(数组元素)  作用就是返回该数组元素的索引号,只返回第一个满足条件的索引号。
 
