周末需要备课

--- a/docs/19高级事件.md
+++ b/docs/19高级事件.md
@@ -1,10 +1,20 @@
 
 
+## 事件
+
+事件是编程语言中的术语，它是用来描述程序的行为或状态的，**一旦行为或状态发生改变，便立即调用一个函数。**
+
+例如：用户使用【鼠标点击】网页中的一个按钮、用户使用【鼠标拖拽】网页中的一张图片
+
+
+
+
+
 ## 注册事件(绑定事件)
 
 给元素添加事件，称为`注册事件`或者`绑定事件`。
 
-注册事件有两种方式：`传统方式`和`方法监听注册方式`
+注册事件有两种方式：`传统方式`和`方法监听注册方式`。
 
 | 传统注册方式                                                 | 方法监听注册方式                                      |
 | :----------------------------------------------------------- | :---------------------------------------------------- |
@@ -33,7 +43,7 @@
 
 
 
-### addEventListener事件监听方式
+### addEventListener事件监听
 
 - `eventTarget.addEventListener()`方法将指定的监听器注册到 eventTarget（目标对象）上
 
