--- a/docs/04js输入输出语句.md
+++ b/docs/04js输入输出语句.md
@@ -39,3 +39,17 @@
     </script>
 ```
 
+
+
+### document.write
+
+`浏览中可以在页面打印内容`
+
+```
+    <script>
+        // 浏览中可以在页面打印内容
+        var a = '123';
+        document.wirte(a);		//123
+    </script>
+```
+
