--- a/DemoCode/2203ES6/常规提问/20230424.md
+++ b/DemoCode/2203ES6/常规提问/20230424.md
@@ -1,3 +1,81 @@
+
+
+# `20230425`常规提问
+
+## 对象的简化写法，使用代码表示
+
+```js
+    <script>
+        let name = '金科';
+        let change = function(){
+            console.log('这是一个函数');
+        }
+        
+        const SCHOOL = {
+            name,
+            change,
+            // 函数的简写形式
+            import(){
+                console.log('123');
+            }
+            
+        }
+        console.log(SCHOOL);
+    </script>
+```
+
+
+
+## 使用命名/声明函数写出a+b=(a+b)
+
+```js
+    // js 命名函数
+    function demo(a,b){
+        return a+b;
+    }
+    console.log(demo(1,2));
+```
+
+
+
+## 使用匿名函数写出n*m=( n * m)
+
+```js
+    // js  匿名函数
+    let fn = function(c,d){
+        return c*d;
+    }
+    console.log(fn(10,10));
+```
+
+
+
+## 使用箭头函数写出 n*m=( n * m)
+
+```js
+    //  ES6 的 箭头函数
+    let fn1 = (a1,a2) => {
+        return a1+a2;
+    }
+    console.log(fn1(99,100));
+```
+
+
+
+## 箭头函数的特性
+
+1. this的静态的，this始终指向函数声明时所在作用域下的this的值。l
+2. 箭头函数，不能作为构造函数进行实例化对象的。
+3. 箭头函数中，不能使用`arguments`变量。
+
+## 声明变量的关键字和声明常量的关键字以及字符串模板的表现形式
+
+```
+let  const  ` `
+```
+
+
+
 # `20230424`常规提问
 
 ## 声明变量的关键字及其特性
