--- a/docs/22Es6-1.md
+++ b/docs/22Es6-1.md
@@ -529,7 +529,7 @@ ES6 引入 `rest` 参数，用于获取函数的实参，用来代替 `arguments
     date('甲','乙','丙');
 ```
 
-![image-20230424214052188](E:\git_repository\DocsBCYjs_git\docs\22Es6-1.assets\image-20230424214052188.png)
+
 
 #### `rest` 参数
 
@@ -540,7 +540,7 @@ ES6 引入 `rest` 参数，用于获取函数的实参，用来代替 `arguments
     date('甲','乙','丙');
 ```
 
-![image-20230424214151926](E:\git_repository\DocsBCYjs_git\docs\22Es6-1.assets\image-20230424214151926.png)
+
 
 #### `rest` 参数必须要放到参数最后
 
@@ -554,7 +554,7 @@ ES6 引入 `rest` 参数，用于获取函数的实参，用来代替 `arguments
     fn(1,2,3,4,5,6);
 ```
 
-![image-20230424214237434](E:\git_repository\DocsBCYjs_git\docs\22Es6-1.assets\image-20230424214237434.png)
+
 
 
 
@@ -624,4 +624,67 @@ ES6 引入 `rest` 参数，用于获取函数的实参，用来代替 `arguments
         console.log(DIVARR);    // 数组类型的参数序列
     </script>
 ```
+
+
+
+### `Symbol`创建于使用
+
+​	ES6引入了一种新的原始数据类型 `Symbol`，表示独一无二的值。它是`JavaScript`语言的第七种数据类型，是一种类似于字符串的数据类型。
+
+- `Symbol`的值是惟一的，用来解决命名冲突的问题。
+- `Symbol`值不能与其他数据进行运算
+- `Symbol`定义的对象属性不能使用 `for...in`遍历循环，但是可以使用 `Reflect.ownKeys`来获取对象的所有键名
+
+#### `Symbol`的创建
+
+```js
+    <!-- Symbol的基本使用 -->
+    <script>
+        // 创建 Symbol
+        let s = Symbol();
+        console.log(s,typeof s);        //Symbol() 'symbol'
+
+        // Symbol值是惟一的
+        let s2 = Symbol('测试');
+        let s3 = Symbol('测试');
+        console.log(s2 === s3);         //false
+
+        // Symbol.for 创建 ,两个的值是一样的
+        let s4 = Symbol.for('金科教育');
+        let s5 = Symbol.for('金科教育');
+        console.log(s4 === s5);         //true
+        
+    </script>
+```
+
+
+
+#### `Symbol` 不能与其他数据进行运算
+
+```js
+    <!-- Symbol 不能与其他数据进行运算 -->
+    <script>
+        let s = Symbol();
+        // let result = s + 100;       //报错
+        // let result = s > 100;       //报错
+        let reslut = s + s;            //报错 
+        console.log(result);
+    </script>
+```
+
+#### `JavaScript`的其他数据类型
+
+```js
+    <script>
+        // undefined
+        // String
+        // Object
+        // Number
+        // Boolean
+    </script>
+```
+
+
+
+#### `Symbol`的使用
 
