--- a/DemoCode/2203ES6/常规提问/20230424.md
+++ b/DemoCode/2203ES6/常规提问/20230424.md
@@ -1,5 +1,53 @@
 
 
+# `20230505`常规提问
+
+## js的三种写入方式
+
+行内、内部、外部链接
+
+## js的注释，分为哪几种。
+
+单行注释：`//`
+
+多行注释：`/*      代码        */`
+
+## js的输入、输出方式
+
+输出：弹窗`alert()`、控制台`console.log( )`、页面写入`document.wirte()`
+
+输入：带有输入的弹窗`prompt()`
+
+## 声明变量的关键字、常量的关键字
+
+变量`let`、常量`const`
+
+## =、==、=== 的区别
+
+`=`赋值、`==`判断是否相等(不匹配数据类型)、`===`判断是否相等(匹配数据类型)
+
+## js的基本数据类型
+
+数值类型、字符串、布尔值、`undefined`、`null`（空值）
+
+## 字符串长度的单词
+
+`length`
+
+## 检测变量数据类型的单词是什么？
+
+`typeof`
+
+## 弹窗输入框获取到的值都是什么类型？
+
+字符串`String`
+
+## 转换成数值类型的方法都有哪些？
+
+`parseInt()`、`parseFloat(string)`、`Number()`、`js 隐式转换(- * / )`
+
+
+
 # `20230425`常规提问
 
 ## 对象的简化写法，使用代码表示
