--- a/DemoCode/2203ES6/常规提问/20230424.md
+++ b/DemoCode/2203ES6/常规提问/20230424.md
@@ -1,3 +1,37 @@
+# `20230506`常规提问
+
+## js的运算符有哪些？
+
+
+
+## 算术运算符有哪些？
+
+
+
+## 递增递减运算符分为哪两种？
+
+
+
+## 比较关系运算符有哪些？
+
+
+
+## 逻辑运算符有哪些？
+
+
+
+## js的基本数据类型有哪些？
+
+
+
+## 数组中push（）是干嘛用的？
+
+
+
+## 数组中的索引值从几开始？长度从几开始？长度的单词是什么？
+
+
+
 
 
 # `20230505`常规提问
