--- a/docs/17内置对象.md
+++ b/docs/17内置对象.md
@@ -1328,5 +1328,5 @@ console.log(arr2);
 
 - 引用类型：复杂数据类型，在存储时变量中存储的仅仅是地址（引用），因此叫做引用数据类型
 
-  - 通过 new 关键字创建的对象（系统对象、自定义对象），如 Object、Array、Date等
+  - 通过 new 关键字创建的对象（系统对象、自定义对象），如 Object、Array、Date等·
 
