--- a/DemoCode/2203ES6/常规提问/20230424.md
+++ b/DemoCode/2203ES6/常规提问/20230424.md
@@ -1,3 +1,35 @@
+
+
+# `20230508`常规提问
+
+## 流程控制if分支语句的语法
+
+
+
+## 案例，使用if分支语句，18岁进入网吧的案例代码？
+
+
+
+## if else 分支语句的语法结构
+
+
+
+## 案例，使用if 分支语句，满18岁可以进入网吧，否则就不让进入的案例代码？
+
+
+
+## if else if（多分支语句的语法结构）
+
+
+
+## 案例，判断成绩案例？
+
+
+
+## 三元表达式的语法规范
+
+
+
 # `20230506`常规提问
 
 ## js的运算符有哪些？
