--- a/DemoCode/HW/20221110HW___03笔试题/20221110HW___03笔试题.md
+++ b/DemoCode/HW/20221110HW___03笔试题/20221110HW___03笔试题.md
@@ -141,3 +141,16 @@
 - C !
 - D 以上都不正确
 
+
+
+
+
+```
+let stu = [
+        {name:'小米',age:18,gender:'男',hometown:'陕西省'},
+        {name:'小明',age:19,gender:'女',hometown:'山西省'},
+        {name:'小红',age:20,gender:'男',hometown:'河南省'},
+        {name:'小刚',age:21,gender:'女',hometown:'河北省'}
+    ];
+```
+
